Bump SecureJarHandler after breaking changes (#125)
* Bump SecureJarHandler

* Bump SJH

* Bump to run on Java 21, since SJH requires it.

* Bump to run on Java 21, since SJH requires it.

* Bump to run on Java 21, since SJH requires it.

* Add add-opens for JMH